Fix tab icons misalignment

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -92,6 +92,18 @@
     }
 
 
+    // Icons ----------------------
+
+    .title.title:before {
+      margin-right: .5em;
+      width: auto;
+      height: auto;
+      line-height: 1;
+      font-size: 1.125em;
+      vertical-align: -.0625em; // Adjust center for the 0.1em font-size increase
+    }
+
+
     // Close icon ----------------------
 
     .close-icon {
